send mail to user

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -46,7 +46,7 @@
         <section class="pt-5 text-center container">
             <div class="row py-lg-5">
                 <div class="col-lg-6 col-md-8 mx-auto">
-                    <h1 class="fw-light">Welcome User</h1>
+                    <h1 class="fw-light">Welcome <%= n %></h1>
                     <p class="lead text-body-secondary">MAHARANA PRATAP COLLEGE OF TECHNOLOGY, GWALIOR</p>
                 </div>
             </div>
