--- a/views/Register.ejs
+++ b/views/Register.ejs
@@ -48,6 +48,12 @@
                             </div>
                             <% } %>
 
+                            <% if(msg.length> 0){ %>
+                                <div class="alert alert-success">
+                                    <!-- To Print -->
+                                    <%= msg %>
+                                </div>
+                                <% } %>    
                                 <!-- User Name -->
                                 <div class="row mb-4">
                                     <div
